    + [JW] Check for Multi-Arch foreign packages shipping shared
      libraries in public library directories.  (Closes: #650444)
    + [NT] Use the new hwcap-dirs data file to determine hwcap dirs.
    + [NT] Ignore missing symbols/shlibs files for libc libnss
      plugins.
  * checks/source-copyright:
    + [JW] Allow a trailing slash in the DEP-5 1.0 URL.
      (Closes: #649813)
  * checks/symlinks:
    + [NT] Ignore langpack symlinks if they appear to be consistent.
      Thanks to Evan Broder for the report.  (Closes: #650793)

  * collection/ar-info:
    + [NT] Properly handle unpacked being a symlink.
  * collection/index:
    + [NT] Use Lintian::Processable::Package to determine source
      name and version.
  * collection/file-info{,-helper}:
    + [NT] Do not open non-files when double-checking gzip files.
    + [NT] Pass "-N" to file as Lintian does not need the aligned
      output.
  * collection/md5sums:
    + [NT] Properly handle unpacked being a symlink.
  * collection/source-control-file{,.desc}:
    + [NT] Removed as they are no longer needed.  They have been
      replaced by a smarter Lintian::Collect.
  * collcetion/unpacked:
    + [NT] Pass --no-check to dpkg-source when requested not to
      check signatures (via reporting/harness).

  * data/{fields => common}/architectures:
    + [NT] Moved architectures to data/common.
  * data/debhelper/dh_addons-manual:
    + [JW] Add python3-sphinx as provider of sphinxdoc dh sequence.
  * data/debhelper/dh_commands-manual:
    + [JW] Add python3-sphinx as provider of dh_sphinxdoc.
      (Closes: #649640)
    + [NT] Added libxine-dev | libxine2-dev as provider of dh_xine.
      (Closes: #659285)
  * data/fields/archive-sections:
    + [NT] Added new sections.  Thanks to Michael Biebl for the
      reminder.  (Closes: #652123)
  * data/shared-libs/hwcap-dirs:
    + [JW] New data file for listing known hwcap dirs.
  * data/shared-libs/ldconfig-dirs: