@@ -1,1 +1,1 @@
-W: source-copyright-dep5-syntax-error source: syntax-error-in-dep5-copyright syntax error at line 13: Continuation line outside a paragraph.
+W: source-copyright-dep5-syntax-error source: syntax-error-in-dep5-copyright line 13: Continuation line outside a paragraph.
